--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -5,7 +5,7 @@ Author: yaminncco
 Colors:
 	Body 		: #333
 	Headers 	: #2B2D42
-	Primary 	: var(--primary-color)
+	Primary 	: #D10024
 	Dark 		: #15161D ##1E1F29
 	Grey 		: #E4E7ED #FBFBFC #8D99AE #B9BABC
 
@@ -78,7 +78,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: var(--primary-color);
+  color: #D10024;
   text-decoration: none;
   outline: none;
 }
@@ -96,7 +96,7 @@ ul, ol {
 .primary-btn {
   display: inline-block;
   padding: 12px 30px;
-  background-color: var(--primary-color);
+  background-color: #D10024;
   border: none;
   border-radius: 40px;
   color: #FFF;
@@ -180,7 +180,7 @@ textarea.input {
 
 .input-number .qty-up:hover, .input-number .qty-down:hover {
   background-color: #E4E7ED;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 /*-- Select input --*/
@@ -260,8 +260,8 @@ textarea.input {
 }
 
 .input-radio input[type="radio"]:checked+label span, .input-checkbox input[type="checkbox"]:checked+label span {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
+  background-color: #D10024;
+  border-color: #D10024;
 }
 
 .input-radio input[type="radio"]:checked+label span:after {
@@ -338,13 +338,13 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: var(--primary-color);
+  background-color: #D10024;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
 
 .section-tab-nav li.active a {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
@@ -402,7 +402,7 @@ textarea.input {
 }
 
 #breadcrumb .breadcrumb-tree li a:hover {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 /*=========================================================
@@ -434,11 +434,11 @@ textarea.input {
 }
 
 .header-links li a:hover {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .header-links li i {
-  color: var(--primary-color);
+  color: #D10024;
   margin-right: 5px;
 }
 
@@ -485,7 +485,7 @@ textarea.input {
 .header-search form .search-btn {
   height: 40px;
   width: 100px;
-  background: var(--primary-color);
+  background: #D10024;
   color: #FFF;
   font-weight: 700;
   border: none;
@@ -537,7 +537,7 @@ textarea.input {
   border-radius: 50%;
   font-size: 10px;
   color: #FFF;
-  background-color: var(--primary-color);
+  background-color: #D10024;
 }
 
 .header-ctn .menu-toggle {
@@ -595,7 +595,7 @@ textarea.input {
   display: inline-block;
   width: calc(50% - 0px);
   padding: 12px;
-  background-color: var(--primary-color);
+  background-color: #D10024;
   color: #FFF;
   text-align: center;
   font-weight: 700;
@@ -625,7 +625,7 @@ textarea.input {
 #navigation {
   background: #FFF;
   border-bottom: 2px solid #E4E7ED;
-  border-top: 3px solid var(--primary-color);
+  border-top: 3px solid #D10024;
 }
 
 /*----------------------------*\
@@ -641,7 +641,7 @@ textarea.input {
 }
 
 .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
-  color: var(--primary-color);
+  color: #D10024;
   background-color: transparent;
 }
 
@@ -650,7 +650,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: var(--primary-color);
+  background-color: #D10024;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -728,7 +728,7 @@ textarea.input {
   bottom: 0;
   left: 0px;
   width: 60%;
-  background: var(--primary-color);
+  background: #D10024;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
@@ -742,7 +742,7 @@ textarea.input {
   bottom: 0;
   left: 1px;
   width: 100%;
-  background: var(--primary-color);
+  background: #D10024;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg) translateX(-100%);
   -ms-transform: skewX(-45deg) translateX(-100%);
@@ -810,7 +810,7 @@ textarea.input {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: var(--primary-color)e6;
+  background: #D10024e6;
   text-align: center;
   border-radius: 50%;
   margin: 0px 5px;
@@ -865,8 +865,8 @@ textarea.input {
 }
 
 .product:hover {
-  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px var(--primary-color);
-  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px var(--primary-color);
+  -webkit-box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
+  box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
 }
 
 .product .product-img {
@@ -891,13 +891,13 @@ textarea.input {
 
 .product .product-img .product-label>span.sale {
   background-color: #FFF;
-  border-color: var(--primary-color);
-  color: var(--primary-color);
+  border-color: #D10024;
+  color: #D10024;
 }
 
 .product .product-img .product-label>span.new {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
+  background-color: #D10024;
+  border-color: #D10024;
   color: #FFF;
 }
 
@@ -925,11 +925,11 @@ textarea.input {
 }
 
 .product .product-body .product-name>a:hover, .product .product-body .product-name>a:focus {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .product .product-body .product-price {
-  color: var(--primary-color);
+  color: #D10024;
   font-size: 18px;
 }
 
@@ -984,7 +984,7 @@ textarea.input {
 
 .product .product-body .product-btns>button:hover {
   background-color: #E4E7ED;
-  color: var(--primary-color);
+  color: #D10024;
   border-radius: 50%;
 }
 
@@ -1060,15 +1060,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: var(--primary-color);
+  color: #D10024;
   opacity: 0;
   visibility: hidden;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: var(--primary-color);
-  border-color: var(--primary-color);
+  color: #D10024;
+  border-color: #D10024;
   padding: 0px 30px 0px 50px;
 }
 
@@ -1121,12 +1121,12 @@ textarea.input {
 }
 
 .product-widget .product-body .product-name>a:hover, .product-widget .product-body .product-name>a:focus {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .product-widget .product-body .product-price {
   font-size: 14px;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .product-widget .product-body .product-price .product-old-price {
@@ -1252,7 +1252,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: var(--primary-color);
+  background-color: #D10024;
 }
 
 .noUi-horizontal {
@@ -1265,7 +1265,7 @@ textarea.input {
   left: -6px;
   top: -4px;
   border: none;
-  background: var(--primary-color);
+  background: #D10024;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 50%;
@@ -1326,12 +1326,12 @@ textarea.input {
 
 .store-grid li:hover {
   background-color: #E4E7ED;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .store-grid li.active {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
+  background-color: #D10024;
+  border-color: #D10024;
   color: #FFF;
   cursor: default;
 }
@@ -1364,12 +1364,12 @@ textarea.input {
 
 .store-pagination li:hover {
   background-color: #E4E7ED;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .store-pagination li.active {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
+  background-color: #D10024;
+  border-color: #D10024;
   color: #FFF;
   font-weight: 500;
   cursor: default;
@@ -1433,7 +1433,7 @@ textarea.input {
 }
 
 #product-imgs .product-preview.slick-current {
-  border-color: var(--primary-color);
+  border-color: #D10024;
 }
 
 #product-imgs .slick-prev {
@@ -1483,7 +1483,7 @@ textarea.input {
 }
 
 .product-details .product-rating>i.fa-star {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .product-details .review-link {
@@ -1495,7 +1495,7 @@ textarea.input {
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 15px;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .product-details .product-price .product-old-price {
@@ -1509,7 +1509,7 @@ textarea.input {
   text-transform: uppercase;
   font-weight: 700;
   margin-left: 30px;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .product-details .product-options {
@@ -1554,15 +1554,15 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: var(--primary-color);
+  color: #D10024;
   opacity: 0;
   visibility: hidden;
 }
 
 .product-details .add-to-cart .add-to-cart-btn:hover {
   background-color: #FFF;
-  color: var(--primary-color);
-  border-color: var(--primary-color);
+  color: #D10024;
+  border-color: #D10024;
   padding: 0px 30px 0px 50px;
 }
 
@@ -1652,7 +1652,7 @@ textarea.input {
 }
 
 #product-tab .tab-nav li.active a {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 #product-tab .tab-nav li a:after {
@@ -1660,7 +1660,7 @@ textarea.input {
   display: block;
   width: 0%;
   height: 2px;
-  background-color: var(--primary-color);
+  background-color: #D10024;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
@@ -1690,7 +1690,7 @@ textarea.input {
 }
 
 .rating-avg .rating-stars>i.fa-star, .rating .rating-stars>i.fa-star {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .rating li {
@@ -1708,7 +1708,7 @@ textarea.input {
 }
 
 .rating .rating-progress>div {
-  background-color: var(--primary-color);
+  background-color: #D10024;
   position: absolute;
   left: 0;
   top: 0;
@@ -1762,7 +1762,7 @@ textarea.input {
 }
 
 .reviews .review-heading .review-rating>i.fa-star {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .reviews-pagination {
@@ -1783,12 +1783,12 @@ textarea.input {
 
 .reviews-pagination li:hover {
   background-color: #E4E7ED;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .reviews-pagination li.active {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
+  background-color: #D10024;
+  border-color: #D10024;
   color: #FFF;
   cursor: default;
 }
@@ -1832,12 +1832,12 @@ textarea.input {
 }
 
 .review-form .input-rating .stars>label:hover:before, .review-form .input-rating .stars>label:hover~label:before {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .review-form .input-rating .stars>input:checked label:before, .review-form .input-rating .stars>input:checked~label:before {
   content: "\f005";
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 /*=========================================================
@@ -1903,7 +1903,7 @@ textarea.input {
 
 .order-summary .order-col .order-total {
   font-size: 24px;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .order-details .payment-method {
@@ -1921,7 +1921,7 @@ textarea.input {
 
 #newsletter.section {
   border-top: 2px solid #E4E7ED;
-  border-bottom: 3px solid var(--primary-color);
+  border-bottom: 3px solid #D10024;
   margin-top: 30px;
 }
 
@@ -1963,7 +1963,7 @@ textarea.input {
   width: 160px;
   height: 40px;
   font-weight: 700;
-  background: var(--primary-color);
+  background: #D10024;
   color: #FFF;
   border: none;
   border-radius: 0px 40px 40px 0px;
@@ -1997,7 +1997,7 @@ textarea.input {
 
 .newsletter .newsletter-follow li a:hover, .newsletter .newsletter-follow li a:focus {
   background-color: #E4E7ED;
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 /*=========================================================
@@ -2034,13 +2034,13 @@ textarea.input {
 
 .footer-links li i {
   margin-right: 15px;
-  color: var(--primary-color);
+  color: #D10024;
   width: 14px;
   text-align: center;
 }
 
 .footer-links li a:hover {
-  color: var(--primary-color);
+  color: #D10024;
 }
 
 .copyright {
@@ -2080,8 +2080,8 @@ textarea.input {
 }
 
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
+  background-color: #D10024;
+  border-color: #D10024;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -2126,7 +2126,7 @@ textarea.input {
 }
 
 .slick-dots li.slick-active button:before {
-  background-color: var(--primary-color);
+  background-color: #D10024;
 }
 
 .custom-dots .slick-dots {
