Frontend: Updated Product view

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -80,7 +80,7 @@
 					<div class="col-md-12">
 						<div class="row">
 							<div class="col-md-4 col-sm-6" *ngFor="let p of products">
-								<div class="card my-2">
+								<!-- <div class="card my-2">
                   <div class="container justify-content-center align-items-center text-center" style="width: 200px; height: 200px;">
                     <img src="/assets/img/products/{{p.image}}" alt="{{p.name}}" width="100%" class="card-img-top" (click)="selectProduct(p.id)" style="cursor: pointer;">
                   </div>
@@ -91,7 +91,29 @@
                       <p class="product-price"><span class="font-weight-bold text-danger">₵ {{p.price}} </span>  <del class="product-old-price text-dark-50"><small>₵{{ p.price +2}}</small></del></p>
                     </div>
                   </div>
-								</div>
+								</div> -->
+                <div class="product">
+                  <div class="product-img">
+                    <img src="/assets/img/products/{{p.image}}" alt="{{p.name}}" (click)="selectProduct(p.id)" style="cursor: pointer;">
+                    <!-- <div class="product-label">
+                      <span class="sale">-30%</span>
+                      <span class="new">NEW</span>
+                    </div> -->
+                  </div>
+                  <div class="product-body">
+                    <p class="product-category">{{p.category}}</p>
+                    <h3 class="product-name"><a href="#">{{p.name}}</a></h3>
+                    <h4 class="product-price">₵{{p.price}} <del class="product-old-price">₵{{p.price + 3.5}}</del></h4>
+                    <div class="product-btns">
+                      <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                      <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                      <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+                    </div>
+                  </div>
+                  <div class="add-to-cart">
+                    <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+                  </div>
+                </div>
 							</div>
 						</div>
 					</div>
