--- a/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/src/app/components/cart/cart.component.html
@@ -1,1 +1,73 @@
-<p>cart works!</p>
+<div class="container my-5">
+<!-- Wen the cart is empty -->
+<div class="text-center my-5" *ngIf="cartData.data[0].numInCart == 0">
+  <h4>Your Cart is Empty</h4>
+
+  <button class="btn btn-primary btn-lg mt-3" routerLink='/'>Go To Shop</button>
+
+</div>
+
+
+
+
+<!-- When the cart has items -->
+<ng-container *ngIf="cartData.data[0].numInCart != 0">
+
+  <div class="row">
+    <div class="col-md-12">
+
+      <table class="table">
+        <thead class="table-dark">
+          <tr class="text-center">
+            <th>Image</th>
+            <th>Title</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Subtotal</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of cartData.data; let i=index">
+              <td class="d-flex align-items-center justify-content-around">
+                <img src="/assets/img/products/{{item.product.image}}" alt="{{item.product.name}}" height="60" class="order-1">
+                <span class="text-danger"><i class="fa fa-trash" (click)="cartService.deleteProductFromCart(i)" ></i></span>
+              </td>
+              <td>
+                <p>{{item.product.name}} </p>
+              </td>
+              <td>{{item.product.price |currency : "USD"}} </td>
+              <td>
+                <form >
+                  <div class="value-button" id="increase" (click)="changeQuantity(i, false)">
+                    <i class="fa fa-minus"></i>
+                  </div>
+                  <input type="number"  id="number" [value]="item.numInCart" [max]="item.product.quantity" readonly>
+                  <div class="value-button" id="increase" (click)="changeQuantity(i, true)">
+                    <i class="fa fa-plus"></i>
+                  </div>
+                </form>
+              </td>
+              <td>
+                <p>{{cartService.calculateSubtotal(i) |currency : "USD"}} </p>
+              </td>
+          </tr>
+          <tr class="border-0">
+            <td style="border: none;"></td>
+            <td></td>
+            <td></td>
+            <td class="font-weight-bold">TOTAL: </td>
+            <td class="font-weight-bold">{{cartTotal |currency : "USD"}} </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+
+</ng-container>
+
+
+
+
+
+</div>
