--- a/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/src/app/components/cart/cart.component.html
@@ -37,7 +37,12 @@
               </td>
               <td>{{item.product.price |currency : "USD"}} </td>
               <td>
-                <form >
+                <div class="input-number" style="width: 100px;">
+                  <input type="number"  id="number" [value]="item.numInCart" [max]="item.product.quantity" readonly>
+                  <span class="qty-up"  id="increase" (click)="changeQuantity(i, true)"><i class="fa fa-plus"></i></span>
+                  <span class="qty-down"  id="decrease" (click)="changeQuantity(i, false)"><i class="fa fa-minus"></i></span>
+                </div>
+                <!-- <form >
                   <div class="value-button" id="increase" (click)="changeQuantity(i, false)">
                     <i class="fa fa-minus"></i>
                   </div>
@@ -45,7 +50,7 @@
                   <div class="value-button" id="increase" (click)="changeQuantity(i, true)">
                     <i class="fa fa-plus"></i>
                   </div>
-                </form>
+                </form> -->
               </td>
               <td>
                 <p>{{cartService.calculateSubtotal(i) |currency : "USD"}} </p>
