--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -80,7 +80,7 @@
 					<div class="col-md-12">
 						<div class="row">
 							<div class="col-md-4 col-sm-6" *ngFor="let p of products">
-								<div class="card my-2">
+								<!-- <div class="card my-2">
                   <div class="container d-flex justify-content-center" style="width: 200px; height: 200px;">
                     <img src="/assets/img/products/{{p.image}}" alt="{{p.name}}" width="100%" class="card-img-top" (click)="selectProduct(p.id)" style="cursor: pointer;">
                   </div>
@@ -105,10 +105,10 @@
                       </div>
                     </div>
                   </div>
-								</div>
-                <!-- <div class="product">
-                  <div class="product-img">
-                    <img src="/assets/img/products/{{p.image}}" alt="{{p.name}}" (click)="selectProduct(p.id)" style="cursor: pointer;">
+								</div> -->
+                <div class="product">
+                  <div class="container d-flex justify-content-center" style="width: 200px; height: 200px;">
+                    <img src="/assets/img/products/{{p.image}}" alt="{{p.name}}" width="100%" (click)="selectProduct(p.id)" style="cursor: pointer;">
                   </div>
                   <div class="product-body">
                     <p class="product-category">{{p.category}}</p>
@@ -128,7 +128,7 @@
 
                     ><i class="fa fa-shopping-cart"></i>  {{ p.quantity < 1? "Out of Stock": "Add to Cart"}}</button>
                   </div>
-                </div> -->
+                </div>
 							</div>
 						</div>
 					</div>
