--- a/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/src/app/components/cart/cart.component.html
@@ -65,7 +65,12 @@
           </tr>
         </tbody>
       </table>
-
+    </div>
+    <div class="col-md-12 d-flex mb-5">
+      <div class="d-flex justify-content-between flex-sm-column flex-md-row w-100">
+        <button routerLink='/checkout' class = 'btn btn-danger btn-sm- order-1'>Checkout</button>
+        <button routerLink='/' class = 'btn btn-success btn-sm- order-0'>Continue Shopping</button>
+      </div>
     </div>
   </div>
 
