--- a/frontend/src/app/components/thankyou/thankyou.component.html
+++ b/frontend/src/app/components/thankyou/thankyou.component.html
@@ -46,16 +46,16 @@
 							</form>
 							<ul class="newsletter-follow">
 								<li>
-									<a href="#"><i class="fa fa-facebook"></i></a>
+									<a routerLink = "/"><i class="fa fa-facebook"></i></a>
 								</li>
 								<li>
-									<a href="#"><i class="fa fa-twitter"></i></a>
+									<a routerLink = "/"><i class="fa fa-twitter"></i></a>
 								</li>
 								<li>
-									<a href="#"><i class="fa fa-instagram"></i></a>
+									<a routerLink = "/"><i class="fa fa-instagram"></i></a>
 								</li>
 								<li>
-									<a href="#"><i class="fa fa-pinterest"></i></a>
+									<a routerLink = "/"><i class="fa fa-pinterest"></i></a>
 								</li>
 							</ul>
 						</div>
